# urlp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  PUBLISHING_CHECKLIST.md  README.md  REFACTORING_PLAN.md  SECURITY.md  SECURITY_ENHANCEMENTS.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  publish.yml
docs/: api_reference.md  exceptions.md
performance/: README.md  performance_report_generator.py  run_benchmarks.py  run_cprofile.py  urllib_vs_urlp.py
tests/: test_builder.py  test_constants_env_overrides.py  test_exceptions.py  test_facade.py  test_ipv6_edgecases_more.py  test_limits.py  test_parser.py  test_relative.py  test_rfc3986_compliance.py  test_rfc3986_extended.py  test_security_dns_rate_limit.py  test_security_fuzzing.py  test_security_ip_formats.py  test_security_phishing.py  test_security_round2.py  test_url.py  test_url_comparison.py  test_validation.py  test_validation_comprehensive.py  test_validation_idna_ipv4.py  test_validation_ipv6_encoding.py
urlp/: __init__.py  _audit.py  _builder.py  _components.py  _parser.py  _patterns.py  _security.py  _validation.py  constants.py  exceptions.py  url.py
urlps/: __init__.py  _audit.py  _builder.py  _components.py  _parser.py  _patterns.py  _security.py  _validation.py  constants.py  exceptions.py  url.py
