[metadata]
name = urlp
version = attr: urlp.__version__

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
include = urlp*
exclude = tests*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --strict-markers
    --tb=short
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_untyped_calls = False
warn_unused_ignores = True
warn_redundant_casts = True
warn_no_return = True

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    .venv,
    build,
    dist,
    *.egg-info
per-file-ignores =
    __init__.py:F401

[isort]
profile = black
line_length = 120
multi_line_mode = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip_glob = .git,__pycache__,.venv
